<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/displayLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true" />

    <LinearLayout
        android:id="@+id/day_in_week"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignWithParentIfMissing="true"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="false"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/s"
            android:textColor="#9cc7e6"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/m"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/t"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/w"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/t"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/f"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/s"
            android:textColor="#9cc7e6"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/day_in_week"
        android:id="@+id/ll"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView android:id="@+id/card_view"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardElevation="1dp"
            card_view:cardUseCompatPadding="true">

            <GridView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/gridView1"
                android:numColumns="7"
                android:gravity="center"
                android:columnWidth="30dp"
                android:stretchMode="columnWidth"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/short_cal_height" />
        </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        app:fastScrollEnabled="true"
        app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
        app:fastScrollHorizontalTrackDrawable="@drawable/line_drawable"
        app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
        app:fastScrollVerticalTrackDrawable="@drawable/line_drawable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerView"
       />

    </LinearLayout>
</RelativeLayout>